--- a/res/layout/restrictionchild.xml
+++ b/res/layout/restrictionchild.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="?android:attr/listPreferredItemHeightSmall"
         android:gravity="center_vertical"
         android:orientation="vertical"
         android:paddingLeft="6dip" >
@@ -16,7 +16,6 @@
             android:id="@+id/imgUsed"
             android:layout_width="24dip"
             android:layout_height="24dip"
-            android:layout_gravity="center_vertical"
             android:contentDescription="@string/help_used"
             android:src="?attr/icon_used" />
 
@@ -28,20 +27,26 @@
             android:src="?attr/icon_granted" />
     </LinearLayout>
 
-    <CheckedTextView
-        android:id="@+id/ctvMethodName"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="?android:attr/listPreferredItemHeightSmall"
         android:layout_weight="1"
-        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:gravity="center_vertical"
-        android:paddingLeft="6dip"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:orientation="vertical"
+        android:paddingLeft="6dip" >
+
+        <CheckedTextView
+            android:id="@+id/ctvMethodName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvChosen"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="?android:attr/listPreferredItemHeightSmall"
         android:gravity="center_vertical"
         android:text="@string/msg_question"
         android:textAppearance="?android:attr/textAppearanceSmall"
