--- a/res/layout/filters.xml
+++ b/res/layout/filters.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="3dip" >
 
     <LinearLayout
         android:layout_width="wrap_content"
