--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -15,6 +15,13 @@
 
         <TextView
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/help_longpress"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textIsSelectable="false" />
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="48dip"
             android:drawableLeft="?attr/icon_used"
             android:drawablePadding="6dip"
