--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -20,6 +20,29 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textIsSelectable="false" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dip"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="48dip"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="@string/msg_question"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textIsSelectable="false" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:paddingLeft="6dip"
+                android:text="@string/help_ondemand"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textIsSelectable="false" />
+        </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="48dip"
