--- a/res/layout/restrictionchild.xml
+++ b/res/layout/restrictionchild.xml
@@ -44,7 +44,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvChosen"
+        android:id="@+id/tvOnDemand"
         android:layout_width="wrap_content"
         android:layout_height="?android:attr/listPreferredItemHeightSmall"
         android:gravity="center_vertical"
