--- a/res/layout/restrictionentry.xml
+++ b/res/layout/restrictionentry.xml
@@ -59,10 +59,10 @@
             android:layout_marginLeft="3dip"
             android:layout_marginRight="6dip"
             android:contentDescription="@string/title_restrict"
-            android:visibility="gone" />
+            android:visibility="invisible" />
 
         <TextView
-            android:id="@+id/tvChosen"
+            android:id="@+id/tvOnDemand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
