Minor layout fixes

--- a/res/layout/reboot.xml
+++ b/res/layout/reboot.xml
@@ -23,6 +23,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/app_copyright"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dip"
         android:text="@string/msg_reboot"
         android:textAppearance="?android:attr/textAppearanceLarge"
