--- a/res/layout/mainentry.xml
+++ b/res/layout/mainentry.xml
@@ -94,6 +94,7 @@
                 android:layout_centerVertical="true"
                 android:text="@string/msg_question"
                 android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textStyle="bold"
                 android:visibility="invisible" />
 
             <TextView
