Clear button for filters
Fixes #1273

--- a/res/layout/filters.xml
+++ b/res/layout/filters.xml
@@ -183,4 +183,11 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btnClear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/menu_clear_all" />
+
 </LinearLayout>
