--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
@@ -17,6 +18,7 @@
         android:paddingTop="6dip"
         android:singleLine="true"
         android:text="https://github.com/M66B/XPrivacy#FAQ46"
-        android:textIsSelectable="false" />
+        android:textIsSelectable="false"
+        tools:ignore="HardcodedText" />
 
 </LinearLayout>
