--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -3,7 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/msg_email"
+        android:textIsSelectable="false"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/etEmail"
@@ -17,7 +28,7 @@
         android:autoLink="web"
         android:paddingTop="6dip"
         android:singleLine="true"
-        android:text="https://github.com/M66B/XPrivacy#FAQ46"
+        android:text="https://github.com/M66B/XPrivacy#FAQ46?mobile=0"
         android:textIsSelectable="false"
         tools:ignore="HardcodedText" />
 
