--- a/res/layout/filters.xml
+++ b/res/layout/filters.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="3dip" >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -73,6 +76,13 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginBottom="3dip"
+        android:layout_marginTop="3dip"
+        android:background="@android:color/darker_gray" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent" >
@@ -139,6 +149,13 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginBottom="3dip"
+        android:layout_marginTop="3dip"
+        android:background="@android:color/darker_gray" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -182,6 +199,13 @@
             android:text="@string/title_fsystem"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginBottom="3dip"
+        android:layout_marginTop="3dip"
+        android:background="@android:color/darker_gray" />
 
     <Button
         android:id="@+id/btnClear"
