--- a/res/layout/filters.xml
+++ b/res/layout/filters.xml
@@ -212,6 +212,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="6dip"
         android:text="@string/menu_clear_all" />
 
 </LinearLayout>
