Fixed method layout in ActivityApp

--- a/res/layout/restrictionchild.xml
+++ b/res/layout/restrictionchild.xml
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/imgCBName"
+            android:layout_toLeftOf="@id/imgCBMethodName"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </RelativeLayout>
 
