--- a/res/values/functions.xml
+++ b/res/values/functions.xml
@@ -28,6 +28,12 @@
     <string name="calling_android.intent.action.RESPOND_VIA_MESSAGE" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/telephony/TelephonyManager.html#ACTION_RESPOND_VIA_MESSAGE">Google documentation</a>]]></string>
     <string name="calling_android.intent.action.CALL" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/content/Intent.html#ACTION_CALL">Google documentation</a>]]></string>
     <!-- clipboard -->
+    <string name="clipboard_addPrimaryClipChangedListener" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/content/ClipboardManager.html#addPrimaryClipChangedListener(android.content.ClipboardManager.OnPrimaryClipChangedListener)">Google documentation</a>]]></string>
+    <string name="clipboard_getPrimaryClip" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/content/ClipboardManager.html#getPrimaryClip()">Google documentation</a>]]></string>
+    <string name="clipboard_getPrimaryClipDescription" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/content/ClipboardManager.html#getPrimaryClipDescription()">Google documentation</a>]]></string>
+    <string name="clipboard_getText" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/content/ClipboardManager.html#getText()">Google documentation</a>]]></string>
+    <string name="clipboard_hasPrimaryClip" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/content/ClipboardManager.html#hasPrimaryClip()">Google documentation</a>]]></string>
+    <string name="clipboard_hasText" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/content/ClipboardManager.html#hasText()">Google documentation</a>]]></string>
     <!-- contacts -->
     <!-- dictionary -->
     <!-- email -->
