--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
+        <!-- long press -->
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,29 +22,67 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textIsSelectable="false" />
 
+        <!-- half -->
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <TextView
+            <LinearLayout
                 android:layout_width="48dip"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="@string/msg_question"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textIsSelectable="false"
-                android:textStyle="bold" />
+                android:layout_height="48dip"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/imgHelpHalf"
+                    android:layout_width="32dip"
+                    android:layout_height="32dip"
+                    android:contentDescription="@string/help_half" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="48dip"
+                android:gravity="center_vertical"
+                android:paddingLeft="6dip"
+                android:text="@string/help_half"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textIsSelectable="false" />
+        </LinearLayout>
+
+        <!-- on demand -->
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:layout_width="48dip"
+                android:layout_height="48dip"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/imgHelpOnDemand"
+                    android:layout_width="32dip"
+                    android:layout_height="32dip"
+                    android:contentDescription="@string/help_ondemand" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="48dip"
                 android:gravity="center_vertical"
                 android:paddingLeft="6dip"
                 android:text="@string/help_ondemand"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textIsSelectable="false" />
         </LinearLayout>
+
+        <!-- used, granted, internet, frozen -->
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,33 +134,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textIsSelectable="false" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <LinearLayout
-                android:layout_width="48dip"
-                android:layout_height="48dip"
-                android:gravity="center_vertical|center_horizontal"
-                android:orientation="horizontal" >
-
-                <ImageView
-                    android:id="@+id/imgHelpHalf"
-                    android:layout_width="32dip"
-                    android:layout_height="32dip"
-                    android:contentDescription="@string/help_half" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="48dip"
-                android:gravity="center_vertical"
-                android:paddingLeft="6dip"
-                android:text="@string/help_half"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textIsSelectable="false" />
-        </LinearLayout>
+        <!-- dangerous -->
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -142,6 +156,8 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textIsSelectable="false" />
         </LinearLayout>
+
+        <!-- states -->
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -205,6 +221,8 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textIsSelectable="false" />
         </LinearLayout>
+
+        <!-- support -->
 
         <LinearLayout
             android:layout_width="match_parent"
