--- a/res/values/functions.xml
+++ b/res/values/functions.xml
@@ -63,6 +63,21 @@
     <string name="identification_GservicesProvider" translatable="false"><![CDATA[Will restrict direct access to android_id, acquired through the Google services provider]]></string>
     <string name="identification_SERIAL" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/os/Build.html#SERIAL">Google documentation</a>]]></string>
     <!-- internet -->
+    <string name="internet_getAllByName" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/java/net/InetAddress.html#getAllByName(java.lang.String)">Google documentation</a>]]></string>
+    <string name="internet_getByAddress" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/java/net/InetAddress.html#getByAddress(java.lang.String,%20byte[])">Google documentation</a>]]></string>
+    <string name="internet_getByName" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/java/net/InetAddress.html#getByName(java.lang.String)">Google documentation</a>]]></string>
+    <string name="internet_getByInetAddress" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/java/net/NetworkInterface.html#getByInetAddress(java.net.InetAddress)">Google documentation</a>]]></string>
+    <string name="internet_getNetworkInterfaces" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/java/net/NetworkInterface.html#getNetworkInterfaces()">Google documentation</a>]]></string>
+    <string name="internet_inet" translatable="false"><![CDATA[Will restrict access to the internet]]></string>
+    <string name="internet_getActiveNetworkInfo" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/ConnectivityManager.html#getActiveNetworkInfo()">Google documentation</a>]]></string>
+    <string name="internet_getAllNetworkInfo" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/ConnectivityManager.html#getAllNetworkInfo()">Google documentation</a>]]></string>
+    <string name="internet_getNetworkInfo" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/ConnectivityManager.html#getNetworkInfo(int)">Google documentation</a>]]></string>
+    <string name="internet_getDetailedState" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/NetworkInfo.html#getDetailedState()">Google documentation</a>]]></string>
+    <string name="internet_getExtraInfo" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/NetworkInfo.html#getExtraInfo()">Google documentation</a>]]></string>
+    <string name="internet_getState" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/NetworkInfo.html#getState()">Google documentation</a>]]></string>
+    <string name="internet_isConnected" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/NetworkInfo.html#isConnected()">Google documentation</a>]]></string>
+    <string name="internet_isConnectedOrConnecting" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/NetworkInfo.html#isConnectedOrConnecting()">Google documentation</a>]]></string>
+    <string name="internet_getConnectionInfo" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/wifi/WifiManager.html#getConnectionInfo()">Google documentation</a>]]></string>
     <!-- ipc -->
     <!-- location -->
     <!-- media -->
