--- a/res/values/functions.xml
+++ b/res/values/functions.xml
@@ -79,6 +79,19 @@
     <string name="internet_isConnectedOrConnecting" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/NetworkInfo.html#isConnectedOrConnecting()">Google documentation</a>]]></string>
     <string name="internet_getConnectionInfo" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/net/wifi/WifiManager.html#getConnectionInfo()">Google documentation</a>]]></string>
     <!-- ipc -->
+    <string name="ipc_android_accounts_IAccountManager" translatable="false"><![CDATA[Will restrict direct inter-process calls to the <a href="http://developer.android.com/reference/android/accounts/AccountManager.html">account manager</a>]]></string>
+    <string name="ipc_android_app_IActivityManager" translatable="false"><![CDATA[Will restrict direct inter-process calls to the <a href="http://developer.android.com/reference/android/app/ActivityManager.html">activity manager</a>]]></string>
+    <string name="ipc_android_content_IClipboard" translatable="false"><![CDATA[Will restrict direct inter-process calls to the <a href="http://developer.android.com/reference/android/content/ClipboardManager.html">clipboard manager</a>]]></string>
+    <string name="ipc_android_net_IConnectivityManager" translatable="false"><![CDATA[Will restrict direct inter-process calls to the <a href="http://developer.android.com/reference/android/net/ConnectivityManager.html">connectivity manager</a>]]></string>
+    <string name="ipc_android_content_IContentService" translatable="false"><![CDATA[Will restrict direct inter-process calls to <a href="http://developer.android.com/guide/topics/providers/content-providers.html">content providers</a>]]></string>
+    <string name="ipc_android_location_ILocationManager" translatable="false"><![CDATA[Will restrict direct inter-process calls to the <a href="http://developer.android.com/reference/android/location/LocationManager.html">location manager</a>]]></string>
+    <string name="ipc_com_android_internal_telephony_ITelephonyRegistry" translatable="false"><![CDATA[Will restrict direct inter-process calls to parts of the <a href="http://developer.android.com/reference/android/telephony/TelephonyManager.html">telephony manager</a>]]></string>
+    <string name="ipc_com_android_internal_telephony_ITelephonyRegistryMSim" translatable="false"><![CDATA[Will restrict direct inter-process calls to parts of the <a href="http://developer.android.com/reference/android/telephony/TelephonyManager.html">telephony manager</a>]]></string>
+    <string name="ipc_android_content_pm_IPackageManager" translatable="false"><![CDATA[Will restrict direct inter-process calls to the <a href="http://developer.android.com/reference/android/content/pm/PackageManager.html">package manager</a>]]></string>
+    <string name="ipc_com_android_internal_telephony_IPhoneSubInfo" translatable="false"><![CDATA[Will restrict direct inter-process calls to parts of the <a href="http://developer.android.com/reference/android/telephony/TelephonyManager.html">telephony manager</a>]]></string>
+    <string name="ipc_com_android_internal_telephony_msim_IPhoneSubInfoMSim" translatable="false"><![CDATA[Will restrict direct inter-process calls to parts of the <a href="http://developer.android.com/reference/android/telephony/TelephonyManager.html">telephony manager</a>]]></string>
+    <string name="ipc_android_view_IWindowManager" translatable="false"><![CDATA[Will restrict direct inter-process calls to the <a href="http://developer.android.com/reference/android/view/WindowManager.html">window manager</a>]]></string>
+    <string name="ipc_android_net_wifi_IWifiManager" translatable="false"><![CDATA[Will restrict direct inter-process calls to the <a href="http://developer.android.com/reference/android/net/wifi/WifiManager.html">Wi-Fi manager</a>]]></string>
     <!-- location -->
     <!-- media -->
     <!-- messages -->
