--- a/res/values/functions.xml
+++ b/res/values/functions.xml
@@ -113,6 +113,15 @@
     <string name="location_GMS_getLastLocation" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/com/google/android/gms/location/LocationClient.html#getLastLocation()">Google documentation</a>]]></string>
     <string name="location_GMS_requestLocationUpdates" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/com/google/android/gms/location/LocationClient.html#requestLocationUpdates(com.google.android.gms.location.LocationRequest,%20android.app.PendingIntent)">Google documentation</a>]]></string>
     <!-- media -->
+    <string name="media_startRecording" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/media/AudioRecord.html#startRecording()">Google documentation</a>]]></string>
+    <string name="media_setPreviewCallback" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/hardware/Camera.html#setPreviewCallback(android.hardware.Camera.PreviewCallback)">Google documentation</a>]]></string>
+    <string name="media_setPreviewCallbackWithBuffer" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/hardware/Camera.html#setPreviewCallbackWithBuffer(android.hardware.Camera.PreviewCallback)">Google documentation</a>]]></string>
+    <string name="media_setOneShotPreviewCallback" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/hardware/Camera.html#setOneShotPreviewCallback(android.hardware.Camera.PreviewCallback)">Google documentation</a>]]></string>
+    <string name="media_takePicture" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/hardware/Camera.html#takePicture(android.hardware.Camera.ShutterCallback,%20android.hardware.Camera.PictureCallback,%20android.hardware.Camera.PictureCallback)">Google documentation</a>]]></string>
+    <string name="media_setOutputFile" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/media/MediaRecorder.html#setOutputFile(java.io.FileDescriptor)">Google documentation</a>]]></string>
+    <string name="media_android_media_action_IMAGE_CAPTURE" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/provider/MediaStore.html#ACTION_IMAGE_CAPTURE">Google documentation</a>]]></string>
+    <string name="media_android_media_action_IMAGE_CAPTURE_SECURE" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/provider/MediaStore.html#ACTION_IMAGE_CAPTURE_SECURE">Google documentation</a>]]></string>
+    <string name="media_android_media_action_VIDEO_CAPTURE" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/provider/MediaStore.html#ACTION_VIDEO_CAPTURE">Google documentation</a>]]></string>
     <!-- messages -->
     <!-- network -->
     <!-- nfc -->
