--- a/res/values/functions.xml
+++ b/res/values/functions.xml
@@ -123,6 +123,14 @@
     <string name="media_android_media_action_IMAGE_CAPTURE_SECURE" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/provider/MediaStore.html#ACTION_IMAGE_CAPTURE_SECURE">Google documentation</a>]]></string>
     <string name="media_android_media_action_VIDEO_CAPTURE" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/provider/MediaStore.html#ACTION_VIDEO_CAPTURE">Google documentation</a>]]></string>
     <!-- messages -->
+    <string name="messages_getAllMessagesFromIcc" translatable="false"><![CDATA[Will restrict access to messages stored on the SIM card]]></string>
+    <string name="messages_SmsProvider" translatable="false"><![CDATA[Will restrict access to SMS messages]]></string>
+    <string name="messages_MmsProvider" translatable="false"><![CDATA[Will restrict access to MMS messages]]></string>
+    <string name="messages_MmsSmsProvider" translatable="false"><![CDATA[Will restrict access to SMS and MMS messages]]></string>
+    <string name="messages_VoicemailContentProvider" translatable="false"><![CDATA[Will restrict access to voicemail messages]]></string>
+    <string name="messages_android_intent_action_DATA_SMS_RECEIVED" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/provider/Telephony.Sms.Intents.html#DATA_SMS_RECEIVED_ACTION">Google documentation</a>]]></string>
+    <string name="messages_android_provider_Telephony_SMS_RECEIVED" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/provider/Telephony.Sms.Intents.html#SMS_RECEIVED_ACTION">Google documentation</a>]]></string>
+    <string name="messages_android_provider_Telephony_WAP_PUSH_RECEIVED" translatable="false"><![CDATA[<a href="http://developer.android.com/reference/android/provider/Telephony.Sms.Intents.html#WAP_PUSH_RECEIVED_ACTION">Google documentation</a>]]></string>
     <!-- network -->
     <!-- nfc -->
     <!-- notifications -->
